_build/_log
### Starting build.
# Target: ftest.ml.depends, tags: { extension:ml, file:ftest.ml, ocaml, ocamldep, quiet }
/mnt/commetud/GEI/OCaml/.opam/4.08.1/bin/ocamldep.opt -modules ftest.ml > ftest.ml.depends
# Target: ford_fulkerson.mli.depends, tags: { extension:mli, file:ford_fulkerson.mli, ocaml, ocamldep, quiet }
/mnt/commetud/GEI/OCaml/.opam/4.08.1/bin/ocamldep.opt -modules ford_fulkerson.mli > ford_fulkerson.mli.depends # cached
# Target: graph.mli.depends, tags: { extension:mli, file:graph.mli, ocaml, ocamldep, quiet }
/mnt/commetud/GEI/OCaml/.opam/4.08.1/bin/ocamldep.opt -modules graph.mli > graph.mli.depends # cached
# Target: graph.cmi, tags: { byte, compile, extension:mli, file:graph.mli, interf, ocaml, quiet }
/mnt/commetud/GEI/OCaml/.opam/4.08.1/bin/ocamlc.opt -c -o graph.cmi graph.mli # cached
# Target: ford_fulkerson.cmi, tags: { byte, compile, extension:mli, file:ford_fulkerson.mli, interf, ocaml, quiet }
/mnt/commetud/GEI/OCaml/.opam/4.08.1/bin/ocamlc.opt -c -o ford_fulkerson.cmi ford_fulkerson.mli # cached
# Target: gfile.mli.depends, tags: { extension:mli, file:gfile.mli, ocaml, ocamldep, quiet }
/mnt/commetud/GEI/OCaml/.opam/4.08.1/bin/ocamldep.opt -modules gfile.mli > gfile.mli.depends # cached
# Target: gfile.cmi, tags: { byte, compile, extension:mli, file:gfile.mli, interf, ocaml, quiet }
/mnt/commetud/GEI/OCaml/.opam/4.08.1/bin/ocamlc.opt -c -o gfile.cmi gfile.mli # cached
# Target: tools.mli.depends, tags: { extension:mli, file:tools.mli, ocaml, ocamldep, quiet }
/mnt/commetud/GEI/OCaml/.opam/4.08.1/bin/ocamldep.opt -modules tools.mli > tools.mli.depends # cached
# Target: tools.cmi, tags: { byte, compile, extension:mli, file:tools.mli, interf, ocaml, quiet }
/mnt/commetud/GEI/OCaml/.opam/4.08.1/bin/ocamlc.opt -c -o tools.cmi tools.mli # cached
# Target: ftest.cmo, tags: { byte, compile, extension:cmo, extension:ml, file:ftest.cmo, file:ftest.ml, implem, ocaml, quiet }
/mnt/commetud/GEI/OCaml/.opam/4.08.1/bin/ocamlc.opt -c -o ftest.cmo ftest.ml
+ /mnt/commetud/GEI/OCaml/.opam/4.08.1/bin/ocamlc.opt -c -o ftest.cmo ftest.ml
File "ftest.ml", line 37, characters 25-38:
37 |   let test_tools2 = gmap test_findpath (fun x -> (string_of_int x)) in 
                              ^^^^^^^^^^^^^
Error: This expression has type Ford_fulkerson.path = Graph.id list
       but an expression was expected of type 'a Graph.graph
Command exited with code 2.
# Compilation unsuccessful.
